# training_brain

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
db/migrations/: 0001_init.sql  0002_canonical_workouts.sql  0003_wellness_and_streams.sql  0004_storage.sql  0005_workouts_executed_unique_constraints.sql  0006_laps_and_zones.sql  0007_relative_effort.sql  0008_tp_planned_stable_key.sql
skills/: training-brain.md
src/training_brain/: db.py  query.py  streams.py  sync.py
src/training_brain/ingestion/: garmin.py  strava.py  trainingpeaks.py
src/training_brain/web/: __init__.py  app.py  calendar_data.py  env_writer.py  garmin_auth.py  strava_auth.py  trainingpeaks_auth.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: GarminCard.tsx  StatusDot.tsx  StravaCard.tsx  TrainingPeaksCard.tsx
web/src/components/calendar/: ComplianceBadge.tsx  DayCell.tsx  WeekRow.tsx  WorkoutCard.tsx
web/src/lib/: dates.ts  sports.ts
web/src/pages/: AuthPage.tsx  CalendarPage.tsx  WorkoutDetailPage.tsx
