[project]
name = "training_brain"
version = "0.1.0"
description = "Personal triathlon training data tier: TrainingPeaks + Garmin + Strava → Supabase"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.3.3",
    "curl_cffi>=0.7",
    "stravalib>=2.0",
    "icalendar>=6.0",
    "httpx>=0.27",
    "supabase>=2.8",
    "fitdecode>=0.10",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
]

[project.scripts]
training-brain = "training_brain.sync:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"
